--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
         <li>Pasta</li>
         <li>Pizza</li>
     </ul>
+    <br>
+    <h1>Algoritmo sencillo</h1>
+    <ol>
+        <li>Tomar un vaso</li>
+        <li>Abrir botella de agua</li>
+        <li>Servir el agua al vaso</li>
+        <li>Tomar el agua</li>
+    </ol>
+    
 </body>
 </html>
