Algoritmo con rep y condiciones

--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
         <li>Servir el agua al vaso</li>
         <li>Tomar el agua</li>
     </ol>
-    
+    <h1>Algoritmo repeticiones y condiciones</h1>
+    <ol>
+        <li>Ingresar a un programa</li>
+        <li>Leer la temperatura</li>
+        <li>Si la temperatura es mayor a 25°</li>
+        <ol>
+            <li>Mostrar "Usar ropa ligera"</li>
+        </ol>
+        <li>Si la temperatura está entre 15° a 25°</li>
+        <ol>
+            <li>Mostrar "Usar ropa cómoda"</li>
+        </ol>
+        <li>Si la temperatura es menor a 15°</li>
+        <ol>
+            <li>Mostrar "Usar ropa abrigadora"</li>
+        </ol>
+        <li>Terminar el programa</li>
+    </ol>
 </body>
 </html>
