--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li>Servir el agua al vaso</li>
         <li>Tomar el agua</li>
     </ol>
+    <br>
     <h1>Algoritmo repeticiones y condiciones</h1>
     <ol>
         <li>Ingresar a un programa</li>
@@ -39,6 +40,23 @@
             <li>Mostrar "Usar ropa abrigadora"</li>
         </ol>
         <li>Terminar el programa</li>
+    </ol>
+    <br>
+    <h1>Mis hobbies</h1>
+    <ol>
+        <li>Pintar</li>
+        <ul>
+            <li>Pintura</li>
+            <li>Pinceles</li>
+            <li>Paleta</li>
+            <li>Lienzo</li>
+        </ul>
+        <li>Bailar</li>
+        <ul>
+            <li>Ropa cómoda</li>
+            <li>Sonido</li>
+            <li>Agua</li>
+        </ul>
     </ol>
 </body>
 </html>
