--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Ejercicio 03 -->
+     <!-- Lista desordenada -->
     <h1>Mis 5 platos preferidos</h1>
     <ul>
         <li>Causa</li>
@@ -15,6 +17,7 @@
         <li>Pizza</li>
     </ul>
     <br>
+    <!-- Lista ordenada -->
     <h1>Algoritmo sencillo</h1>
     <ol>
         <li>Tomar un vaso</li>
@@ -23,6 +26,7 @@
         <li>Tomar el agua</li>
     </ol>
     <br>
+    <!-- Lista ordenada repeticiones y condiciones -->
     <h1>Algoritmo repeticiones y condiciones</h1>
     <ol>
         <li>Ingresar a un programa</li>
@@ -42,6 +46,7 @@
         <li>Terminar el programa</li>
     </ol>
     <br>
+    <!-- Lista anidada -->
     <h1>Mis hobbies</h1>
     <ol>
         <li>Pintar</li>
