--- a/index.html
+++ b/index.html
@@ -47,21 +47,44 @@
     </ol>
     <br>
     <!-- Lista anidada -->
-    <h1>Mis hobbies</h1>
+    <h1 id="hobbies">Mis hobbies</h1>
     <ol>
-        <li>Pintar</li>
-        <ul>
-            <li>Pintura</li>
-            <li>Pinceles</li>
-            <li>Paleta</li>
-            <li>Lienzo</li>
-        </ul>
+        <li>Pintar
+            <ul>
+                <li>Pintura</li>
+                <li>Pinceles</li>
+                <li>Paleta</li>
+                <li>Lienzo</li>
+            </ul>
+        </li>
         <li>Bailar</li>
-        <ul>
-            <li>Ropa cómoda</li>
-            <li>Sonido</li>
-            <li>Agua</li>
-        </ul>
+            <ul>
+                <li>Ropa cómoda</li>
+                <li>Sonido</li>
+                <li>Agua</li>
+            </ul>
+        </li>
     </ol>
+
+    <h1>Hipervínculos</h1>
+
+        <!-- 1. Hipervínculo externo -->
+        <a href="https://www.google.com" target="_blank">Ir a Google</a>
+        <br>
+
+        <!-- 2. Hipervínculo interno hacia cuenta.html -->
+        <a href="cuenta.html">Ver boleta de pago</a>
+        <br>
+
+        <!-- 3. Hipervínculo interno -->
+        <a href="#hobbies">Ir a hobbies</a>
+        <br>
+
+        <!-- 4. Imagen como enlace -->
+        <a href="https://github.com" target="_blank">
+        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" 
+            alt="GitHub" width="80">
+        </a>
+
 </body>
 </html>
